save devs print registered letter label

--- a/client/src/app/modules/quotation/components/quotation/quotation.component.html
+++ b/client/src/app/modules/quotation/components/quotation/quotation.component.html
@@ -339,6 +339,9 @@
     <button mat-menu-item (click)="generateMailingLabel()">
       <span>Imprimer une étiquette/lettre postale</span>
     </button>
+    <button mat-menu-item (click)="generateRegisteredLetterLabel()">
+      <span>Imprimer une étiquette/lettre postale</span>
+    </button>
   </mat-menu>
 </button>
 
