--- a/client/src/app/modules/quotation/components/simple-provision/simple-provision.component.html
+++ b/client/src/app/modules/quotation/components/simple-provision/simple-provision.component.html
@@ -1,22 +1,21 @@
 <form [formGroup]="simpleProvisionForm" *ngIf="simpleProvision && provision">
   <mat-tab-group animationDuration="0ms" (selectedTabChange)="onTabChange($event)" [selectedIndex]="index">
     <mat-tab [label]="provision.provisionType.label">
-      <!--div class="form-div" >
+      <div class="form-div">
         <table class="full-width">
-          <tr
-            *ngIf="simpleProvision.waitedCompetentAuthority && simpleProvision.simpleProvisionStatus && simpleProvision.simpleProvisionStatus.code ==SIMPLE_PROVISION_WAITING_DOCUMENT_AUTHORITY">
+          <tr *ngIf="simpleProvision.waitedCompetentAuthority && simpleProvision.simpleProvisionStatus">
             <td>
               <autocomplete-competent-authority [(model)]="simpleProvision.waitedCompetentAuthority"
                 [form]="simpleProvisionForm" propertyName="waitedCompetentAuthority" [isMandatory]="false"
-                label="Autorité compétente en attente" [isDisabled]="true"></autocomplete-competent-authority>
+                label="Autorité compétente en attente"></autocomplete-competent-authority>
             </td>
-            <td><generic-datepicker *ngIf="provision.lastCompetentAuthorityReminderDateTime"
+            <td><generic-datepicker *ngIf="provision.lastCompetentAuthorityReminderDateTime" [isMandatory]="false"
                 [(model)]="provision.lastCompetentAuthorityReminderDateTime" label="Dernière relance de l'AC"
-                [form]="simpleProvisionForm" propertyName="lastCompetentAuthorityReminderDateTime"
-                [isDisabled]="true"></generic-datepicker></td>
+                [form]="simpleProvisionForm" propertyName="lastCompetentAuthorityReminderDateTime"></generic-datepicker>
+            </td>
           </tr>
         </table>
-      </div-->
+      </div>
       <mat-divider class="margin-mat-divider"></mat-divider>
       <customer-order-comment *ngIf="provision && provision.id" [provision]="provision"></customer-order-comment>
     </mat-tab>
