--- a/client/src/app/modules/quotation/components/quotation/quotation.component.html
+++ b/client/src/app/modules/quotation/components/quotation/quotation.component.html
@@ -340,7 +340,7 @@
       <span>Imprimer une étiquette/lettre postale</span>
     </button>
     <button mat-menu-item (click)="generateRegisteredLetterLabel()">
-      <span>Imprimer une étiquette/lettre postale</span>
+      <span>Imprimer une étiquette recommandée</span>
     </button>
   </mat-menu>
 </button>
