save devs print label registered letter, todo match template of registered letter with printDelegate function

--- a/client/src/app/modules/quotation/components/print-label-dialog/print-label-dialog.component.html
+++ b/client/src/app/modules/quotation/components/print-label-dialog/print-label-dialog.component.html
@@ -16,14 +16,14 @@
         </td>
       </tr>
       <tr>
-        <td>
+        <td *ngIf="printLabel">
           <select-print-label-recipient [(model)]="selectedRecipient" label="Destinataire de l'étiquette"
             [form]="printLabelForm" propertyName="selectedRecipient" [isMandatory]="true"
             [isDisabled]="false"></select-print-label-recipient>
         </td>
       </tr>
       <tr>
-        <td>
+        <td *ngIf="selectedRecipient == competentAuthorityRecipient">
           <autocomplete-competent-authority [(model)]="selectedCompetentAuthority" [form]="printLabelForm"
             propertyName="competentAuthority" [isMandatory]="true"
             label="Autorité compétente"></autocomplete-competent-authority>
