delete unused code

--- a/client-jss/src/app/main/components/header/header.component.html
+++ b/client-jss/src/app/main/components/header/header.component.html
@@ -190,7 +190,7 @@
       <!-- Main navbar END -->
 
       <!-- Nav right START -->
-      <div class="nav flex-nowrap align-items-center flex-grow-1 justify-content-end mb-2 d-none d-lg-flex">
+      <div class="nav flex-nowrap align-items-center ">
         <!-- Nav Button -->
         <div class="nav-item d-md-block">
           <a style="cursor: pointer;" (click)="openNewFormality($event)"
