--- a/client/src/app/modules/administration/components/constant/constant.component.html
+++ b/client/src/app/modules/administration/components/constant/constant.component.html
@@ -1574,6 +1574,13 @@
                 [isDisabled]="!editMode"></select-category>
             </td>
           </tr>
+          <tr>
+            <td>
+              <select-accounting-account-class [(model)]="constant.accountingAccountClassProduct"
+                label="Classe comptable - Produits" [form]="constantForm" propertyName="accountingAccountClassProduct"
+                [isMandatory]="true" [isDisabled]="!editMode"></select-accounting-account-class>
+            </td>
+          </tr>
         </table>
       </fieldset>
     </div>
