--- a/src/main/resources/mails/templates/invoice-page.html
+++ b/src/main/resources/mails/templates/invoice-page.html
@@ -114,8 +114,8 @@
                     <tr>
                         <td>
                             <span
-                                th:if="${invoice.billingLabelIntercommunityVat!=null} and ${invoice.billingLabelIntercommunityVat.length()>0} ">Numéro
-                                de TVA :<span th:text="${invoice.billingLabelIntercommunityVat}"></span></span>
+                                th:if="${invoice.billingLabelIntercommunityVat!=null} and ${invoice.billingLabelIntercommunityVat.length()>0} ">TVA
+                                Intracomm. :<span th:text="${invoice.billingLabelIntercommunityVat}"></span></span>
                         </td>
                     </tr>
                 </table>
