--- a/client/src/app/modules/quotation/components/print-label-dialog/print-label-dialog.component.html
+++ b/client/src/app/modules/quotation/components/print-label-dialog/print-label-dialog.component.html
@@ -31,8 +31,8 @@
       </tr>
       <tr>
         <td>
-          <generic-toggle [(model)]="printRegisteredLetter" label="Imprimer les étiquettes pour lettre recommandée ?"
-            [form]="printLabelForm" propertyName="printRegisteredLetter"></generic-toggle>
+          <generic-toggle [(model)]="printRegisteredLetter" label="Imprimer une liasse LRAR ?" [form]="printLabelForm"
+            propertyName="printRegisteredLetter"></generic-toggle>
         </td>
       </tr>
       <tr>
